# opencode-remote

./: .env.example  .gitignore  LICENSE  PUBLIC_RELEASE_NOTES.md  README.md  SECURITY.md  install.sh  opencode.cn.json  opencode.intl.json  requirements.txt  run.ps1  run.sh  start.sh
kit/: cli.py
kit/api/: env.py  tester.py  validator.py
kit/json/: backup.py  fixer.py  report.py  scanner.py  templater.py  validator.py
rust-bot/: Cargo.toml  README.md
rust-bot/src/: main.rs  models.rs  runner.rs  runtime_env.rs  task_service.rs  util.rs
scripts/: check-secrets.sh  preflight.ps1  preflight.sh
tests/: test_api_tester_mock.py  test_api_validate.py  test_backup_rollback.py  test_json_fix.py
tools/: opencode-cn.ps1  opencode-cn.sh  opencode-intl.ps1  opencode-intl.sh
