[package]
name = "tg-opencode-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
futures-util = "0.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
html-escape = "0.2"
teloxide = { version = "0.13", features = ["macros", "ctrlc_handler", "rustls"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
